[BlinkGenPropertyTrees] Make lossy IntSize to DoubleSize explicit

This is rather surprising:
  IntSize(1, 33553177) != RoundedIntSize(IntSize(1, 33553177))
This is because we use RoundedIntSize(const DoubleSize&) due to the implicit
DoubleSize(const IntSize&) constructor, which rounds the size to 1x33553176
because doubles do not have perfect precision.

This removes a RoundedIntSize from CollectDrawableLayersForLayerListRecursively
which incorrectly resulted in rounding the layer bounds. This patch also makes
the DoubleSize(const IntSize&) constructor explicit to prevent this mistake in
the future, because the conversion is lossy. The corresponding FloatSize
constructor is already explicit.

Bug: 854194
Cq-Include-Trybots: luci.chromium.try:linux-blink-gen-property-trees;luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I71ecc68eeaa39e602ba7e415222eafea2e706047
Reviewed-on: https://chromium-review.googlesource.com/1107203
Commit-Queue: Philip Rogers <pdr@chromium.org>
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569121}
Former-commit-id: 176b7c068f243442799fa6c32ca993f4b811f4bf