third_party/blink/renderer/core/inspector/inspector_layer_tree_agent.cc
@@ -433,8 +433,7 @@ Response InspectorLayerTreeAgent::makeSnapshot(const String& layer_id,
   if (!layer->DrawsContent())
     return Response::Error("Layer does not draw content");
 
-  IntSize size = ExpandedIntSize(layer->Size());
-  IntRect interest_rect(IntPoint(0, 0), size);
+  IntRect interest_rect(IntPoint(), layer->Size());
   suppress_layer_paint_events_ = true;
 
   // If we hit a devtool break point in the middle of document lifecycle, for
